title overlap fix

--- a/src/app/widgets/calendar/calendar.component.css
+++ b/src/app/widgets/calendar/calendar.component.css
@@ -134,6 +134,13 @@
         animation: fadeOutDownSwipe 2000ms cubic-bezier(0.68, -0.55, 0.265, 1.55) forwards;
     }
 
+    .cal-title-overlap {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        width: 100%;
+    }
+
     @keyframes fadeOutDownSwipe {
   from {
     opacity: 1;
